objects/Knowledge__kav.object
<CustomObject>
    <fields>
        <fullName>Solution_Internal_notes__c</fullName>
        <description>Not visible to Customers.  Info that would be helpful to an internal staff member but is not appropriate to share with a customer or partner.  Examples include links to internal content or bugs, contact information for a specific individual who can help resolve or resolution steps that can only be performed by an internal staff member.</description>
        <inlineHelpText>Not visible to Customers.   Examples include links to internal content or bugs, contact information for a specific individual who can help resolve or resolution steps that can only be performed by an internal staff member.</inlineHelpText>
        <label>Z-Not Used-Internal notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Resolution__c</fullName>
        <description>A numbered series of steps to resolve the problem, if known.  A resolution section may include a workaround (a way to mitigate the immediate impact of the problem), a fix (a way of ultimately resolving the problem), or both.</description>
        <inlineHelpText>A numbered series of steps to resolve the problem, if known.  A resolution section may include a workaround (a way to mitigate the immediate impact of the problem), a fix (a way of ultimately resolving the problem), or bot</inlineHelpText>
        <label>Z-Not Used-Resolution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Solution_Symptoms__c</fullName>
        <description>A list of observable facts that characterize the understandable behavior, starting with the most obvious and customer-identified, but continuing with those identified during the diagnostic process.  Error messages, log file entries, and behavior different than expected are all candidate symptoms.</description>
        <inlineHelpText>A list of observable facts that characterize the understandable behavior.  Error messages, log file entries, and behavior different than expected are all candidate symptoms.</inlineHelpText>
        <label>Symptoms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Troubleshooting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Troubleshooting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Instruction_Search_Tags__c</fullName>
        <description>Key words to help with finding articles through search.</description>
        <label>Z-Not Used-Search Tags</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Instruction_Steps__c</fullName>
        <description>Text containing the steps necessary to follow in order to complete a task.</description>
        <label>Steps</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Work_Instruction_Task__c</fullName>
        <label>Task</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Knowledge</label>
    <listViews>
        <fullName>Documentation</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>Product_Pillar__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Product_Detail__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.Documentation</value>
        </filters>
        <filters>
            <field>Product_Pillar__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Docs_Category__c</field>
            <operation>equals</operation>
        </filters>
        <label>Documentation</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Downloads</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>Product_Pillar__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Product_Line__c</columns>
        <columns>Product_Detail__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.Release_Notes</value>
        </filters>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>Downloads</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Outstanding_Articles_with_Box_Links</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>Record_Type_Developer_Name__c</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Topics</field>
            <operation>includes</operation>
            <value>#BoxLink</value>
        </filters>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>Topics</field>
            <operation>includes</operation>
            <value>#DarcieCantHelp</value>
        </filters>
        <label>Outstanding Articles with Box Links</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Product_Notification_Partner_Type</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Record_Type_Developer_Name__c</columns>
        <columns>OpenTV_Solution_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>Record_Type_Developer_Name__c</field>
            <operation>equals</operation>
            <value>Product_Notifications</value>
        </filters>
        <label>Product Notification (Partner) Type</label>
    </listViews>
    <listViews>
        <fullName>Service_Alert_Type</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Record_Type_Developer_Name__c</columns>
        <columns>OpenTV_Solution_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type_Developer_Name__c</field>
            <operation>equals</operation>
            <value>Service_Alert</value>
        </filters>
        <label>Service Alert Type</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>draft_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>VERSION_NUMBER</columns>
        <columns>Files_Attached__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Draft Articles</label>
    </listViews>
    <listViews>
        <fullName>published_articles</fullName>
        <columns>TITLE</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>IS_CHANNEL_CSP</columns>
        <columns>Files_Attached__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Published Articles</label>
    </listViews>
    <pluralLabel>Knowledge</pluralLabel>
    <recordTypes>
        <fullName>Article</fullName>
        <active>true</active>
        <label>Article</label>
    </recordTypes>
    <recordTypes>
        <fullName>Break_Fix</fullName>
        <active>false</active>
        <label>Break_Fix</label>
    </recordTypes>
    <recordTypes>
        <fullName>Documentation</fullName>
        <active>true</active>
        <label>Documentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>FAQ</fullName>
        <active>false</active>
        <label>FAQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>How_To</fullName>
        <active>false</active>
        <label>How_To</label>
    </recordTypes>
    <recordTypes>
        <fullName>OpenTV_Solution</fullName>
        <active>false</active>
        <label>OpenTV_Solution</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Notifications</fullName>
        <active>true</active>
        <label>Product Notifications</label>
    </recordTypes>
    <recordTypes>
        <fullName>Q_A</fullName>
        <active>false</active>
        <label>Q_A</label>
    </recordTypes>
    <recordTypes>
        <fullName>RGB_FAQ</fullName>
        <active>false</active>
        <label>RGB_FAQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>Release_Notes</fullName>
        <active>true</active>
        <label>Release_Notes</label>
    </recordTypes>
    <recordTypes>
        <fullName>SLA_Internal_Only</fullName>
        <active>true</active>
        <label>SLA_Internal_Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Alert</fullName>
        <active>true</active>
        <label>Service_Alert</label>
    </recordTypes>
    <recordTypes>
        <fullName>Solution</fullName>
        <active>false</active>
        <label>Solution</label>
    </recordTypes>
    <recordTypes>
        <fullName>Work_Instruction</fullName>
        <active>true</active>
        <label>Work_Instruction</label>
    </recordTypes>
</CustomObject>